Changing iframe snippet
You know what this is ¯\_(ツ)_/¯

--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
     <div style="text-align: center">
     <h1>BOTUI TEST</h1>
     </div>
-    <div class="botui-app-container" id="api-bot">
-        <bot-ui></bot-ui>
-    </div>
-    <script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/botui/build/botui.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="scripts.js"></script>
+    <iframe src="https://carolbot.rheo.bot/#!/home" id="iFrame1" frameborder="0" style="position:fixed; overflow: overlay; bottom: 0px;right: 15px; z-index: 1031;width: 375px; height:610px; max-height: Calc(100%-10px)!important;"
+    allowtransparency="true"></iframe>
+    <link rel="stylesheet" href="https://cdn.rheo.bot/css/chatbot_test.css">
+    <script type="application/javascript" src="https://cdn.rheo.bot/js/chatbot_test.js"></script>
 </body>
 
 </html>
