--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <div style="text-align: center">
     <h1>BOTUI TEST</h1>
     </div>
-    <iframe src="https://feature.rheo.bot/#!/chatbot/bot" id="iFrame1" frameborder="0" style="position:fixed; overflow: overlay; bottom: 0px;right: 15px; z-index: 1031;width: 375px; height:610px; max-height: Calc(100%-10px)!important;"
-    allowtransparency="true"></iframe>
-    <link rel="stylesheet" href="https://cdn.rheo.bot/css/chatbot_test.css">
-    <script type="application/javascript" src="https://cdn.rheo.bot/js/chatbot_test.js"></script>
+    
+    <iframe src='https://one.rheo.bot' id='iFrame1' frameborder='0'
+    style='position: fixed; overflow: overlay; bottom: 0em; right: 0em; z-index: 1031; width: 81px; height: 81px;'
+    allowtransparency='true' class='animation'></iframe>
+    <link rel='stylesheet' href='https://cdn.rheo.bot/css/chatbot.css'>
+    <script type="application/javascript" src="https://cdn.rheo.bot/js/chatbot.js"></script>
 </body>
 
 </html>
