Removed a line break.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           Hi there!
           <br /><br />
           My name's Suraj. I've been working primarily with Python since mid-2018, but have an intermediate level of experience in Bash and JS, and base experience in C++.<br />
-          I've dabbled in PWAs built with Ionic in college, and have generally done a fair bit of server setup on Linux machines.<br />
+          I've dabbled in PWAs built with Ionic in college, and have generally done a fair bit of server setup on Linux machines.
           <br /><br />
           I like working on backend services. Over the past few years, I've worked on:
           <div class="flex-item">
