--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="parentBody">   
       <div class="flex-container mainBody">
-        <div class-"flex-item">
+        <div class-"flex-item" id="mainBodyDiv">
         <p>
           Hi there!
           <br /><br />
