Added a Don't Panic tooltip for nightmode toggle

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
               <li>general utilties using bash scripting</li>
             </ul>
           </div>
-          This list will keep expanding as time passes. I don't have a lot more to say about me professionally.<br /><br />
+          This list will keep expanding as time passes.<br /><br />
+          Besides programming, I like to keep up with tech, as people in this line of work are wont to do.
+          I also like motorcycles, and old-school tech, retro stuff from the early internet, and so on.<br /><br />
+          (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
           In the meantime, if you'd like to know more about me, I blog <a href="https://blog.surajz.codes" target="_blank">here</a>. <br /><br />
           You can also <a href="mailto:surajzala12@gmail.com">write</a> to me.<br /><br />
           Have a good day!
@@ -65,7 +68,7 @@
       
       </div>
       <div class="flex-container footerDarkMode">
-        <div class="flex-item toggleDarkMode">
+        <div class="flex-item toggleDarkMode" title="I store no cookies. The night mode toggle is basic JS time checking. This site is mostly built from scratch.">
           <label class="toggleDarkText">
             🌙&nbsp
           </label>
