Added svg background, tweaked transparency

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- import the webpage's javascript file -->
     <script src="scripts.js" defer></script>
   </head>  
-  <body onload="checkTime();">
+  <body onload="checkTime();" class="">
     <div class="parentBody" id="parentBody">   
       <div class="flex-container mainBody" id="mainBody">
         <div class-"flex-item" id="mainBodyDiv">
