--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p>
           Hi there!
           <br /><br />
-          My name's Suraj. I've been working primarily with Python since mid-2018, have an intermediate level of experience in Bash and JS,
-          and base experience in C++. I have also dabbled in PWAs built with Ionic while I was in college,
+          I'm Suraj. I've been working primarily with Python since mid-2018, have an intermediate level of experience in Bash and JS,
+          and base experience in C++. I've also dabbled in PWAs built with Ionic while I was in college,
           and have worked on a fair few Linux server setups over the past six years.
           <br /><br />
           I like working on backend services. Over the past few years, I've worked on:
@@ -37,9 +37,8 @@
               <li>general utilties using bash scripting</li>
             </ul>
           </div>
-          This list will keep expanding as time passes.<br /><br />
-          Besides programming, I like to keep up with tech, as people in this line of work are wont to do.
-          I also like motorcycles, old-school tech, retro stuff from the early internet, and so on.<br /><br />
+          Besides programming, I like to keep up with tech, as people in my line of work are wont to do.
+          I also like motorcycles, old-school tech, retro stuff from the early internet, and so on.
           (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
           In the meantime, if you'd like to know more about me, I blog <a href="https://blog.surajz.codes" target="_blank">here</a>. <br /><br />
           You can also <a href="mailto:surajzala12@gmail.com">write</a> to me.<br /><br />
