added affirmations stuff, can't test on local because CORS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!-- import the webpage's javascript file -->
     <script src="scripts.js" defer></script>
   </head>  
@@ -44,6 +43,9 @@
           You can also <a href="mailto:surajzala12@gmail.com">write</a> to me.<br /><br />
           Have a good day!
         </p>
+      </div>
+      <div>
+        <p class="affirmationBox">loading...</p>
       </div>
     </div>
   </div>
@@ -79,4 +81,5 @@
       </div>
     </div>
   </footer>
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/8bit-wonder" type="text/css" onload="getAffirmation();"/>
 </html>
