added title text to affirmations box

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </p>
       </div>
       <div>
-        <p class="affirmationBox" id="affirmationBox" >loading...</p>
+        <p class="affirmationBox" id="affirmationBox" title="A little cheering-up for you :)">loading...</p>
       </div>
     </div>
   </div>
