webpage now remembers dark/light mode if it's set manually until the next timecycle

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             🌙&nbsp
           </label>
           <label class="switch">
-            <input type="checkbox" onclick="goDark()" id="goDarkToggle">
+            <input type="checkbox" onclick="goDark(true)" id="goDarkToggle">
             <span class="slider round"></span>
           </label>
         </div>
