Fixes to styling a little bit, nothing significant, but I do want to clean up the HTML structure I've set up later

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li>general utilties using bash scripting</li>
             </ul>
           </div>
-          Besides programming, I like to keep up with tech, read sci-fi, and read about space.
+          Besides programming, I like to keep up with tech, read sci-fi, and get excited/feel existential terror about space.
           I also like motorcycles, old-school tech, retro stuff from the early internet, and so on.
           (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
           In the meantime, if you'd like to know more about me, I blog <a href="https://blog.surajz.codes" target="_blank">here</a>. <br /><br />
