added resume.pdf, formatted main content div to align better, fixed the transparency hijinks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <li>an enterprise chatbot solution built on the same backend</li>
               <li>NLP management functionalities built on top of services like DialogFlow</li>
               <li>generic RESTful APIs on Flask and Django</li>
-              <li>automating/scheduling tasks with cron</li>
+              <li>automating/scheduling tasks with cron, and other linux-y stuff</li>
               <li>basic CI/CD pipelines using Jenkins</li>
               <li>general utilties using bash scripting</li>
             </ul>
@@ -41,7 +41,8 @@
           Besides programming, I like to keep up with tech, read sci-fi, and get excited/feel existential terror about space.
           I also like motorcycles, old-school tech, retro stuff from the early internet, and so on.
           (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
-          In the meantime, if you'd like to know more about me, I blog <a href="https://blog.surajz.codes" target="_blank">here</a>. <br /><br />
+          In the meantime, if you'd like to know more about me, you can view my resume <a href="surajzala-resume.pdf" target="_blank">here</a>. 
+          I also blog <a href="https://blog.surajz.codes" target="_blank">here</a>. 
           You can also <a href="mailto:surajzala12@gmail.com">write</a> to me.<br /><br />
           Have a good day!
         </p>
