Missed this little bit. Although now that I think of it, taking the design towards a shell-prompt-y situation wouldn't be so bad

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       gtag('config', 'G-HZFZHSVNEX');
     </script>
-    <!-- end gtag section -->>
+    <!-- end gtag section -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
