Fix: updated blog link in footer to reference the subdomain mapping.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           Hi there!
           <br /><br />
           I'm Suraj. I've been working primarily with Python since mid-2018, have an intermediate level of experience in Bash and JS,
-          and base experience in C++. I've also dabbled in PWAs built with Ionic while I was in college,
+          and some basic experience in C++. I've also dabbled in PWAs built with Ionic while I was in college,
           and have worked on a fair few Linux server setups over the past six years.
           <br /><br />
           I like working on backend services. Over the past few years, I've worked on:
@@ -56,19 +56,14 @@
   <footer class="footer" id="footer">
     <div class="flex-container footerMaster" id="footerMaster">
       <div class="flex-container footerSocialBox" id="footerSocialBox">
-        <!-- <div class="flex-item footerText">         
-        <p id="footerText">
-          This is a basic website. Nothing fancy, just getting it done.
-        </p>
-        </div> -->
-        <!-- <div class="flex-item faviconSocial"> -->
+        <div class="flex-item faviconSocial">
           <a class="faviconLink" href="https://twitter.com/surajzala?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <!-- </div> -->
-        <!-- <div class="flex-item faviconSocial"> -->
-          <a class="faviconLink" href="https://surajzcodes.tumblr.com/" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
-        <!-- </div><div class="flex-item faviconSocial"> -->
+        </div>
+        <div class="flex-item faviconSocial">
+          <a class="faviconLink" href="https://blog.surajz.codes/" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
+        </div><div class="flex-item faviconSocial">
           <a class="faviconLink" href="https://github.com/szala12" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <!-- </div> -->
+        </div>
       
       </div>
       <div class="flex-container footerDarkMode">
