Fix: Some unintended changes went in from files on this machine. Oops.

--- a/index.html
+++ b/index.html
@@ -56,15 +56,19 @@
   <footer class="footer" id="footer">
     <div class="flex-container footerMaster" id="footerMaster">
       <div class="flex-container footerSocialBox" id="footerSocialBox">
-        <div class="flex-item faviconSocial">
+        <!-- <div class="flex-item footerText">         
+        <p id="footerText">
+          This is a basic website. Nothing fancy, just getting it done.
+        </p>
+        </div> -->
+        <!-- <div class="flex-item faviconSocial"> -->
           <a class="faviconLink" href="https://twitter.com/surajzala?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        </div>
-        <div class="flex-item faviconSocial">
+        <!-- </div> -->
+        <!-- <div class="flex-item faviconSocial"> -->
           <a class="faviconLink" href="https://blog.surajz.codes/" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
-        </div><div class="flex-item faviconSocial">
+        <!-- </div><div class="flex-item faviconSocial"> -->
           <a class="faviconLink" href="https://github.com/szala12" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-        </div>
-      
+        <!-- </div> -->
       </div>
       <div class="flex-container footerDarkMode">
         <div class="flex-item toggleDarkMode" title="I store no cookies. The night mode toggle is basic JS time checking. This site is mostly built from scratch.">
