--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
           Besides programming, I like to keep up with tech, read sci-fi, and get excited/feel existential terror about space.
           I also like motorcycles, old-school tech, retro stuff from the early internet, and so on.
           (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
-          In the meantime, if you'd like to know more about me, you can view my resume <a href="surajzala-resume.pdf" target="_blank">here</a>. 
-          I also blog <a href="https://blog.surajz.codes" target="_blank">here</a>. 
-          You can also <a href="mailto:surajzala12@gmail.com">write</a> to me.<br /><br />
+          In the meantime, if you'd like to know more about me, you can check out my linkedin, or twitter, or something. 
+          It's the age of the internet, I don't need to tell most of you how to find me, do I? 😉
+          I do sometimes blog <a href="https://blog.surajz.codes" target="_blank">here</a>. 
+          And if for some reason, you feel like pinging me the old school way, you can always <a href="mailto:surajzala12@gmail.com">email</a> me.<br /><br />
           Have a good day!
         </p>
       </div>
