--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
           In the meantime, if you'd like to know more about me, you can check out my linkedin, or twitter, or something. 
           It's the age of the internet, I don't need to tell most of you how to find me, do I? 😉
-          I do sometimes blog <a href="https://blog.essnine.dev" target="_blank">here</a>. 
+          I do sometimes blog <a href="https://essnine.dev/blog" target="_blank">here</a>. 
           And if for some reason, you feel like pinging me the old school way, you can always <a href="mailto:surajzala12@gmail.com">email</a> me.<br /><br />
           Have a good day!
         </p>
@@ -66,7 +66,7 @@
           <a class="faviconLink" href="https://twitter.com/surajzala?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <!-- </div> -->
         <!-- <div class="flex-item faviconSocial"> -->
-          <a class="faviconLink" href="https://blog.essnine.dev/" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
+          <a class="faviconLink" href="https://essnine.dev/blog" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
         <!-- </div><div class="flex-item faviconSocial"> -->
           <a class="faviconLink" href="https://github.com/essnine" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         <!-- </div> -->
