--- a/index.html
+++ b/index.html
@@ -33,19 +33,29 @@
               <li>training and mentoring padawans new to programming professionally</li>
             </ul>
           </div>
-          Not to say that I don't like the notion of working in front-end, just that it's not a priority for me at the moment.
-          I mean. Look at this website. Right?</ br>
+          
           Besides programming, I like to keep up with tech, read sci-fi, and get excited/feel existential terror about space.
+          (Big surprise, right?) I'm trying to learn some Elixir and a bit of Rust, although that's not really going very well.
+          But you gotta keep truckin'.
+
           I also like motorcycles, old-school tech, retro stuff from the early internet, and so on.
+          I mean, let me be clear. I love these things. It's an entirely unrelated matter that I somehow
+          never manage to have or make enough time for any of these things. But doubt you not my love for them.
+
+          I'm currently stuck in the more orchestral parts of the Halo: Reach OST album. It messes with my head 
+          when the weather's all rainy like this.
+
           (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
           In the meantime, if you'd like to know more about me, you can check out my linkedin, or twitter, or something. 
-          It's the age of the internet, I don't need to tell most of you how to find me, do I? 😉
-          I do sometimes blog <a href="https://essnine.dev/blog" target="_blank">here, although I think the site's going to be down for development for a bit.</a>. 
+          
+          I do sometimes blog <a href="https://essnine.dev/blog" target="_blank">here</a>, <br />
+          although I think the site's going to be down for development for a bit.
           And if for some reason, you feel like pinging me the old school way, you can always email me at surajzala12[at]gmail[dot]com.<br /><br />
           Have a good day!
         </p>
       </div>
       <div>
+        <p>A little cheer-up line for you:<br /></p>
         <p class="affirmationBox" id="affirmationBox" title="A little cheering-up for you :)">loading...</p>
       </div>
     </div>
