I've forgotten a lot of my HTML Basics

--- a/index.html
+++ b/index.html
@@ -34,29 +34,30 @@
             </ul>
           </div>
           
-          Besides programming, I like to keep up with tech, read sci-fi, and get excited/feel existential terror about space.
-          (Big surprise, right?) I'm trying to learn some Elixir and a bit of Rust, although that's not really going very well.
-          But you gotta keep truckin'.
+          Besides programming, I like to keep up with tech, read sci-fi, and get excited/feel existential terror about space.<br />
+          (Big surprise, right?) I'm trying to learn some Elixir and a bit of Rust, although that's not really going very well.<br />
+          But you gotta keep truckin'.<br /><br />
 
-          I also like motorcycles, old-school tech, retro stuff from the early internet, and so on.
-          I mean, let me be clear. I love these things. It's an entirely unrelated matter that I somehow
-          never manage to have or make enough time for any of these things. But doubt you not my love for them.
+          I also like motorcycles, old-school tech, retro stuff from the early internet, and so on.<br />
+          I mean, let me be clear. I love these things. It's an entirely unrelated matter that I somehow<br />
+          never manage to have or make enough time for any of these things. But doubt you not my love for them.<br /><br />
 
           I'm currently stuck in the more orchestral parts of the Halo: Reach OST album. It messes with my head 
-          when the weather's all rainy like this.
+          when the weather's all rainy like this.<br />
 
           (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
           In the meantime, if you'd like to know more about me, you can check out my linkedin, or twitter, or something. 
           
           I do sometimes blog <a href="https://essnine.dev/blog" target="_blank">here</a>, <br />
-          although I think the site's going to be down for development for a bit.
-          And if for some reason, you feel like pinging me the old school way, you can always email me at surajzala12[at]gmail[dot]com.<br /><br />
+          although I think the site's going to be down for development for a bit.<br />
+          And if for some reason, you feel like pinging me the old school way,<br />
+          you can always email me at surajzala12[at]gmail[dot]com.<br /><br />
           Have a good day!
         </p>
       </div>
       <div>
-        <p>A little cheer-up line for you:<br /></p>
-        <p class="affirmationBox" id="affirmationBox" title="A little cheering-up for you :)">loading...</p>
+        <p>A little cheer-up line for you</p>
+        <p class="affirmationBox" id="affirmationBox" title="A little cheering-up for you :)" style="font-weight: bolder;">loading...</p>
       </div>
     </div>
   </div>
