Playing around with some details

--- a/index.html
+++ b/index.html
@@ -43,21 +43,20 @@
           never manage to have or make enough time for any of these things. But doubt you not my love for them.<br /><br />
 
           I'm currently stuck in the more orchestral parts of the Halo: Reach OST album. It messes with my head 
-          when the weather's all rainy like this.<br />
+          when the weather's all rainy like this.<br /><br />
 
-          (I also tend to have a screwdriver of some sort on me most of the time.)<br /><br />
-          In the meantime, if you'd like to know more about me, you can check out my linkedin, or twitter, or something. 
+          Anyway, in the meantime, if you'd like to know more about me, you can check out my linkedin, or twitter, or something. 
           
           I do sometimes blog <a href="https://essnine.dev/blog" target="_blank">here</a>, <br />
           although I think the site's going to be down for development for a bit.<br />
+          I want to be able to blog more soon. Hopefully it'll be soon.<br /><br />
           And if for some reason, you feel like pinging me the old school way,<br />
           you can always email me at surajzala12[at]gmail[dot]com.<br /><br />
           Have a good day!
         </p>
       </div>
       <div>
-        <p>A little cheer-up line for you</p>
-        <p class="affirmationBox" id="affirmationBox" title="A little cheering-up for you :)" style="font-weight: bolder;">loading...</p>
+        <p class="affirmationBox" id="affirmationBox" title="A little cheering-up for you :)" style="font-weight: bolder;">Hover here for a surprise!</p>
       </div>
     </div>
   </div>
@@ -69,7 +68,7 @@
           This is a basic website. Nothing fancy, just getting it done.
         </p>
         </div> -->
-          <a class="faviconLink" href="https://twitter.com/surajzala?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a class="faviconLink" href="https://twitter.com/essninedotdev?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           <a class="faviconLink" href="https://essnine.dev/blog" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
           <a class="faviconLink" href="https://github.com/essnine" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
